Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.5(EOL), 10.6(EOL), 10.11, 11.0(EOL), 11.1(EOL), 11.2(EOL), 11.3(EOL), 11.4, 11.5(EOL)
Description
|
11.4.2 b86a2f03b6a9a0b5e222fb2f52b07c85c491479e (Debug) |
mariadbd: /test/11.4_dbg/storage/innobase/include/trx0trx.h:1108: void trx_t::assert_freed() const: Assertion `!*detailed_error' failed.
|
|
11.4.2 b86a2f03b6a9a0b5e222fb2f52b07c85c491479e (Debug) |
Core was generated by `/test/MD140524-mariadb-11.4.2-linux-x86_64-dbg/bin/mariadbd --no-defaults --max'.
|
Program terminated with signal SIGABRT, Aborted.
|
#0 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
|
[Current thread is 1 (Thread 0x1508953ec980 (LWP 1415389))]
|
(gdb) bt
|
#0 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
|
#1 0x00001508955c5859 in __GI_abort () at abort.c:79
|
#2 0x00001508955c5729 in __assert_fail_base (fmt=0x15089575b588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x55f6e8bfee0d "!*detailed_error", file=0x55f6e8baa698 "/test/11.4_dbg/storage/innobase/include/trx0trx.h", line=1108, function=<optimized out>) at assert.c:92
|
#3 0x00001508955d6fd6 in __GI___assert_fail (assertion=assertion@entry=0x55f6e8bfee0d "!*detailed_error", file=file@entry=0x55f6e8baa698 "/test/11.4_dbg/storage/innobase/include/trx0trx.h", line=line@entry=1108, function=function@entry=0x55f6e8bfed60 "void trx_t::assert_freed() const") at assert.c:101
|
#4 0x000055f6e856bf63 in trx_t::assert_freed (this=this@entry=0x15088c377b80) at /test/11.4_dbg/storage/innobase/include/trx0trx.h:1108
|
#5 0x000055f6e856852e in trx_t::free (this=this@entry=0x15088c377b80) at /test/11.4_dbg/storage/innobase/trx/trx0trx.cc:390
|
#6 0x000055f6e856930c in trx_free_at_shutdown (trx=trx@entry=0x15088c377b80) at /test/11.4_dbg/storage/innobase/trx/trx0trx.cc:541
|
#7 0x000055f6e85604c3 in rw_trx_hash_t::rw_trx_hash_shutdown_destructor (arg=<optimized out>) at /test/11.4_dbg/storage/innobase/include/trx0sys.h:422
|
#8 0x000055f6e8779fd2 in lf_hash_destroy (hash=hash@entry=0x55f6e931c980 <trx_sys+49536>) at /test/11.4_dbg/mysys/lf_hash.cc:388
|
#9 0x000055f6e855fe3d in rw_trx_hash_t::destroy (this=0x55f6e931c980 <trx_sys+49536>) at /test/11.4_dbg/storage/innobase/include/trx0sys.h:547
|
#10 trx_sys_t::close (this=0x55f6e9310800 <trx_sys>) at /test/11.4_dbg/storage/innobase/trx/trx0sys.cc:322
|
#11 0x000055f6e852be51 in innodb_shutdown () at /test/11.4_dbg/storage/innobase/srv/srv0start.cc:2075
|
#12 0x000055f6e8329b14 in innobase_end () at /test/11.4_dbg/storage/innobase/handler/ha_innodb.cc:4243
|
#13 0x000055f6e7fbc2b9 in ha_finalize_handlerton (plugin=0x55f6eb69a420) at /test/11.4_dbg/sql/handler.cc:596
|
#14 0x000055f6e7cb0a7d in plugin_deinitialize (plugin=0x55f6eb69a420, ref_check=ref_check@entry=true) at /test/11.4_dbg/sql/sql_plugin.cc:1270
|
#15 0x000055f6e7cb2f30 in reap_plugins () at /test/11.4_dbg/sql/sql_plugin.cc:1344
|
#16 0x000055f6e7cb45ea in plugin_shutdown () at /test/11.4_dbg/sql/sql_plugin.cc:2099
|
#17 0x000055f6e7b59a1e in clean_up (print_message=print_message@entry=true) at /test/11.4_dbg/sql/mysqld.cc:1999
|
#18 0x000055f6e7b670dd in mysqld_main (argc=<optimized out>, argv=<optimized out>) at /test/11.4_dbg/sql/mysqld.cc:5996
|
#19 0x000055f6e7b57bf6 in main (argc=<optimized out>, argv=<optimized out>) at /test/11.4_dbg/sql/main.cc:34
|